--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,6 @@
     "extends":
         "airbnb-base",
     "rules": {
-      "no-console": "off",
-      "no-underscore-dangle":["error", {"allow":["_id"]}],
-      "func-names": "off"
+      "no-underscore-dangle":["error", {"allow":["_id"]}]
     }
 }
